--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <html>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<script src="scripts/scripts.js"></script>
+<head>
+    <meta charset="utf-8">
+    <title>Fizz Buzz</title>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="scripts/scripts.js"></script>
+</head>
+<body>
+   <ul id="main"></ul>
+</body>
+
 </html>
